Fix project cards on mobile
Allow for smaller project cards - but only if there is only one column
of cards.

--- a/src/containers/StartupProjects/StartupProjects.scss
+++ b/src/containers/StartupProjects/StartupProjects.scss
@@ -59,8 +59,14 @@
 
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1rem 1rem;
+}
+
+@media (min-width: 350px) {
+  .projects-container {
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  }
 }
 
 .project-card-footer span.project-tag {
